правки стилів html, розмітка модального вікна, додавання скрипта

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,13 +34,15 @@
         <nav class="site-nav">
           <a href="./index.html" class="logo word"><span class="logo">Web</span>Studio</a>
           <ul class="anchors list">
-            <li class="item"><a href="./index.html" class="link">Студія</a></li>
-            <li class="item"><a href="./portfolio.html" class="link current">Портфоліо</a></li>
-            <li class="item"><a href="./index.html" class="link">Контакти</a></li>
+            <li class="anchors-item"><a href="./index.html" class="link">Студія</a></li>
+            <li class="anchors-item">
+              <a href="./portfolio.html" class="link current">Портфоліо</a>
+            </li>
+            <li class="anchors-item"><a href="./index.html" class="link">Контакти</a></li>
           </ul>
         </nav>
         <ul class="auth-nav">
-          <li class="item">
+          <li class="auth-nav-item">
             <a href="mailto:info@devstudio.com" class="link">
               <svg class="auth-icon-mail" width="16" height="12">
                 <use href="./images/icons.svg#icon-mail"></use>
@@ -48,7 +50,7 @@
               info@devstudio.com</a
             >
           </li>
-          <li class="item">
+          <li class="auth-nav-item">
             <a href="tel:+380961111111" class="link">
               <svg class="auth-icon-smartphone" width="10" height="16">
                 <use href="./images/icons.svg#icon-smartphone"></use>
@@ -74,12 +76,21 @@
           <ul class="portfolio">
             <li class="portfolio-card">
               <a class="portfolio-link link" href="./portfolio.html">
-                <img
-                  src="./images/portfolio1.jpg"
-                  alt="монітор ноутбука"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-thumb">
+                  <img
+                    src="./images/portfolio1.jpg"
+                    alt="монітор ноутбука"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="card-description">
                   <h2 class="portfolio-title">Технокряк</h2>
                   <p class="portfolio-name">Веб-сайт</p>
@@ -88,12 +99,21 @@
             </li>
             <li class="portfolio-card">
               <a class="portfolio-link link" href="./portfolio.html">
-                <img
-                  src="./images/portfolio2.jpg"
-                  alt="постер з баскетболітсами"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-thumb">
+                  <img
+                    src="./images/portfolio2.jpg"
+                    alt="постер з баскетболітсами"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="card-description">
                   <h2 class="portfolio-title">
                     Постер <span lang="en">New Orlean vs Golden Star</span>
@@ -104,12 +124,21 @@
             </li>
             <li class="portfolio-card">
               <a class="portfolio-link link" href="./portfolio.html">
-                <img
-                  src="./images/portfolio3.jpg"
-                  alt="логотип ресторану"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-thumb">
+                  <img
+                    src="./images/portfolio3.jpg"
+                    alt="логотип ресторану"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="card-description">
                   <h2 class="portfolio-title">Ресторан <span lang="en">Seafood</span></h2>
                   <p class="portfolio-name">Додаток</p>
@@ -118,7 +147,16 @@
             </li>
             <li class="portfolio-card">
               <a class="portfolio-link link" href="./portfolio.html">
-                <img src="./images/portfolio4.jpg" alt="навушники" width="370" height="294" />
+                <div class="portfolio-thumb">
+                  <img src="./images/portfolio4.jpg" alt="навушники" width="370" height="294" />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="card-description">
                   <h2 class="portfolio-title">Проєкт <span lang="en">Prime</span></h2>
                   <p class="portfolio-name">Маркетинг</p>
@@ -127,12 +165,21 @@
             </li>
             <li class="portfolio-card">
               <a class="portfolio-link link" href="./portfolio.html">
-                <img
-                  src="./images/portfolio5.jpg"
-                  alt="дві маленькі коробки"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-thumb">
+                  <img
+                    src="./images/portfolio5.jpg"
+                    alt="дві маленькі коробки"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="card-description">
                   <h2 class="portfolio-title">Проєкт <span lang="en">Boxes</span></h2>
                   <p class="portfolio-name">Додаток</p>
@@ -141,12 +188,21 @@
             </li>
             <li class="portfolio-card">
               <a class="portfolio-link link" href="./portfolio.html">
-                <img
-                  src="./images/portfolio6.jpg"
-                  alt="монітор комп'ютера"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-thumb">
+                  <img
+                    src="./images/portfolio6.jpg"
+                    alt="монітор комп'ютера"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="card-description">
                   <h2 lang="en" class="portfolio-title">Inspiration has no Borders</h2>
                   <p class="portfolio-name">Веб-сайт</p>
@@ -156,7 +212,21 @@
 
             <li class="portfolio-card">
               <a class="portfolio-link link" href="./portfolio.html">
-                <img src="./images/portfolio7.jpg" alt="відкрита книга" width="370" height="294" />
+                <div class="portfolio-thumb">
+                  <img
+                    src="./images/portfolio7.jpg"
+                    alt="відкрита книга"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="card-description">
                   <h2 class="portfolio-title">Видання <span lang="en">Limited Edition</span></h2>
                   <p class="portfolio-name">Дизайн</p>
@@ -165,7 +235,21 @@
             </li>
             <li class="portfolio-card">
               <a class="portfolio-link link" href="./portfolio.html">
-                <img src="./images/portfolio8.jpg" alt="логотип проекту" width="370" height="294" />
+                <div class="portfolio-thumb">
+                  <img
+                    src="./images/portfolio8.jpg"
+                    alt="логотип проекту"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="card-description">
                   <h2 class="portfolio-title">Проєкт <span lang="en">LAB</span></h2>
                   <p class="portfolio-name">Маркетинг</p>
@@ -174,12 +258,21 @@
             </li>
             <li class="portfolio-card">
               <a class="portfolio-link link" href="./portfolio.html">
-                <img
-                  src="./images/portfolio9.jpg"
-                  alt="відкритий ноутбук"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-thumb">
+                  <img
+                    src="./images/portfolio9.jpg"
+                    alt="відкритий ноутбук"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="card-description">
                   <h2 lang="en" class="portfolio-title">Growing Business</h2>
                   <p class="portfolio-name">Додаток</p>
