--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
         <nav class="site-nav">
           <a href="./index.html" class="logo word"><span class="logo">Web</span>Studio</a>
           <ul class="anchors list">
-            <li class="item"><a href="./index.html" class="link current">Студія</a></li>
-            <li class="item"><a href="./portfolio.html" class="link">Портфоліо</a></li>
-            <li class="item"><a href="./index.html" class="link">Контакти</a></li>
+            <li class="anchors-item"><a href="./index.html" class="link current">Студія</a></li>
+            <li class="anchors-item"><a href="./portfolio.html" class="link">Портфоліо</a></li>
+            <li class="anchors-item"><a href="./index.html" class="link">Контакти</a></li>
           </ul>
         </nav>
         <ul class="auth-nav">
-          <li class="item">
+          <li class="auth-nav-item">
             <a href="mailto:info@devstudio.com" class="link">
               <svg class="auth-icon-mail" width="16" height="12">
                 <use href="./images/icons.svg#icon-mail"></use>
@@ -48,7 +48,7 @@
               info@devstudio.com</a
             >
           </li>
-          <li class="item">
+          <li class="auth-nav-item">
             <a href="tel:+380961111111" class="link">
               <svg class="auth-icon-smartphone" width="10" height="16">
                 <use href="./images/icons.svg#icon-smartphone"></use>
@@ -66,7 +66,16 @@
       <section class="hero section">
         <div class="container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-          <button type="button" class="button">Замовити послугу</button>
+          <button type="button" class="button" data-modal-open>Замовити послугу</button>
+        </div>
+        <div class="backdrop is-hidden" data-modal>
+          <div class="modal is-hidden" data-modal>
+            <button type="button" class="btn-close" data-modal-close>
+              <svg class="icon-close" width="18" height="18">
+                <use href="./images/icons.svg#icon-close"></use>
+              </svg>
+            </button>
+          </div>
         </div>
       </section>
 
@@ -525,5 +534,7 @@
         </div>
       </div>
     </footer>
+
+    <script src="./js/modal.js"></script>
   </body>
 </html>
